--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   release:
+    if: github.event_name == 'push' && contains(github.ref, 'refs/heads/master') && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
 
     steps:
